Fix the wrapping of radio buttons in the NCO dashboard
* Add some CSS classes that allow me to create inline block elements
  based on screen size
* Apply the screen-based inline CSS classes to the radio buttons so that
  they all wrap to a new line when the screen gets too small

--- a/ui/styles/screen.scss
+++ b/ui/styles/screen.scss
@@ -45,7 +45,11 @@ h3 {
 		display        : inline-block;
 		text-transform : none;
 		font-size      : rem-calc(12);
-		margin-left    : 1em;
+		margin-right   : 1em;
+	}
+
+	input[type="radio"] {
+		margin-bottom: rem-calc(9);
 	}
 }
 
@@ -410,5 +414,33 @@ ul {
 
 	h3 {
 		border: none;
+	}
+}
+
+.inline {
+	display: block;
+}
+
+@media #{$small-up} {
+	.small {
+		&.inline {
+			display: inline-block;
+		}
+	}
+}
+
+@media #{$medium-up} {
+	.medium {
+		&.inline {
+			display: inline-block;
+		}
+	}
+}
+
+@media #{$large-up} {
+	.large {
+		&.inline {
+			display: inline-block;
+		}
 	}
 }
